fixed code readability

--- a/public/css/login.css
+++ b/public/css/login.css
@@ -17,7 +17,7 @@ body {
     align-items: center; 
     justify-content: center;
     padding: 20px;
-    padding-top: 4%;
+    padding-top: 5%;
     background-color: #FBF4E2;
     border-radius: 30px;
     height: auto;
@@ -88,7 +88,7 @@ body {
 }
 
 .login_button {
-    width: 140px;
+    width: 130px;
     padding: 10px;
     margin-top: 15px;
     margin-bottom: 18px;
@@ -96,7 +96,7 @@ body {
     color: rgb(0, 0, 0);
     border: none;
     border-radius: 30px;
-    font-size: .8rem;
+    font-size: .7rem;
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
@@ -114,9 +114,9 @@ body {
 }
 
 .left-image{
-    height: 190px;
-    width: 190px;
-    margin-top: -170px;
+    height: 200px;
+    width: 200px;
+    margin-top: -175px;
     margin-bottom: -170px;
     margin-left: -25px;
 }
@@ -127,28 +127,19 @@ body {
 }
 
 .acc{
-    margin-left: 340px;
-    font-size: .6rem;
-}
-
-.new-user {
-    text-align: center;
-    margin-top: 90px;
-    font-size: 0.9rem;
-    color: #111;
+    font-size: .7rem;
+    font-family: Poppins;
 }
 
 .sign-up-link {
-    color: #265073; 
-    text-decoration: none;
-    font-weight: bold;
+    color: #265073;
+    font-family: Poppins;
 }
 
 .sign-up-link:hover {
     color: #0004ff; 
     text-decoration: none;
 }
-
 
 .social-icons i {
     color: #000000;
